--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/passport": "^10.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "predis/predis": "^1.1",
         "spatie/laravel-medialibrary": "^7.20",
         "yajra/laravel-datatables-oracle": "^9.9"
     },
